--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "peerjs": "^0.3.14"
   },
+  "browserify": {
+  "transform": ["reactify"]
+},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.5.0",
