--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
     "newcap": true,
     "noarg": true,
     "quotmark": "single",
-    "regexp": true,
+    "regexp": false,
     "undef": true,
     "unused": true,
     "strict": true,
