--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "quill",
   "version": "0.0.0",
   "dependencies": {
+    "flexgrid": "^4.1.0",
+    "masonry-layout": "^3.3.2",
     "peerjs": "^0.3.14"
   },
   "browserify": {
-  "transform": ["reactify"]
-},
+    "transform": [
+      "reactify"
+    ]
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.5.0",
