--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quill",
   "version": "0.0.0",
   "dependencies": {
+    "basicmodal": "^3.1.3",
     "flexgrid": "^4.1.0",
     "masonry-layout": "^3.3.2",
     "peerjs": "^0.3.14"
